# ro2_vru_system

./: .gitignore  README.md  mav.parm
src/: task_list.msgpack  test.msgpack  topic
src/Orchestrator/check_tasks/: CMakeLists.txt  package.xml
src/Orchestrator/check_tasks/src/: distributer.cpp  reformater.cpp  task_verification.cpp
src/Orchestrator/coordinator/: CMakeLists.txt  package.xml
src/Orchestrator/coordinator/map/han_parking_deck/: lanelet2_map.osm
src/Orchestrator/coordinator/map/han_parking_deck_real_noa/: lanelet2_map.osm
src/Orchestrator/coordinator/map/han_parking_deck_reallife/: lanelet2_map.osm
src/Orchestrator/coordinator/map/prescan_2.4/: lanelet2_map.osm  map_config.yaml
src/Orchestrator/coordinator/scripts/: OSMHandler.py  coo.ui  coordinator_layout.py  test.py  user_interface.py
src/Orchestrator/coordinator/src/: event_handler.cpp  monitoring.cpp
src/basic_mobile_robot/: CMakeLists.txt  package.xml
src/basic_mobile_robot/config/: ekf.yaml  ekf_gps.yaml  ekf_gps_real.yaml
src/basic_mobile_robot/launch/: basic_mobile_bot_v1.launch.py  basic_mobile_bot_v3.launch.py  basic_mobile_bot_v4.launch.py  basic_mobile_bot_v5.launch.py  commander.py  gps_ekf.launch.py  map.launch.py  orchestrator.launch.py  vru.launch.py  vru_offboard.launch.py  vru_simulation.launch.py  vru_system.launch.py
src/basic_mobile_robot/meshes/: robot_base11.stl
src/basic_mobile_robot/models/: basic_mobile_bot_v2.urdf  vru_rover.urdf  vru_rover_static.urdf
src/basic_mobile_robot/models/basic_mobile_bot_description/: model.sdf
src/basic_mobile_robot/models/r1_rover/: r1_rover.sdf
src/basic_mobile_robot/models/r1_rover__/: model.config  r1_rover.sdf
src/basic_mobile_robot/models/vru_rover/: model.config  vru_rover.sdf
src/basic_mobile_robot/models/vru_rover/meshes/: Wheel_vru.stl
src/basic_mobile_robot/params/: nav2_params.yaml
src/basic_mobile_robot/rviz/: nav2_config.rviz  nxp.rviz  safeclai.rviz  sil_sim.rviz
src/basic_mobile_robot/scripts/: arm_vru.py  cmd_translate.py  cmd_translate_mavros.py  imu_tf.py  joint_state_publisher.py  mavros_low_level_path_follower.py  mavros_offboard_task_excuter.py  navsat_transform.py  path_planner.py  plan_drawer.py  task_manger_streetdrone.py
src/basic_mobile_robot/worlds/basic_mobile_bot_world/: smalltown_vru.world
src/px4_ros_com/src/examples/offboard_py/: joint_state_publisher.py  mavros_offboard.py  mavros_offboard_task_excuter.py  mavros_sub.py  off.py  offboard_control.py
src/vru_robot_controller/high_level_controller/: CMakeLists.txt  package.xml
src/vru_robot_controller/high_level_controller/src/: task_executer.cpp  task_manager.cpp
src/vru_robot_controller/logging/: CMakeLists.txt  package.xml
src/vru_robot_controller/logging/src/: my_node.cpp
src/vru_robot_controller/low_level_controller/: CMakeLists.txt  package.xml
src/vru_robot_controller/low_level_controller/include/low_level_controller/: mavros_offboard_controller.hpp
src/vru_robot_controller/low_level_controller/scripts/: mavros_low_level_path_follower.py  nav2.py
src/vru_robot_controller/low_level_controller/src/: hardware_controller.cpp  hardware_controller_interface.cpp  mavros_offboard_controller.cpp  mavros_offboard_main.cpp
src/vru_robot_controller/vru_msgs/: CMakeLists.txt  package.xml
src/vru_robot_controller/vru_msgs/msg/: DesiredMotion.msg  EmergencyBrake.msg  Events.msg  HardwareControls.msg  Status.msg  Task.msg  TaskList.msg  TaskStatus.msg  TopicData.msg  VRURobotData.msg
